tests/invalid/Function_Invalid_14.whiley
function g() -> int:
    return f()
    
function f():
    return h()

function h()->int:
    return 0